--- a/README
+++ b/README
@@ -8,9 +8,20 @@ JS code won't show up for the navbar.
 JS for smaller screens wont work. / Fixed
 
 Plans:
+Update Resume 
+Add contact section
+Update a few projects
+Reboot Design 
 Change Skill section
 Change the scroll bar - Done
 Add moving background
 Add scale increase factor to footer icons when hovering over
 Add motion to the skills section
 Redo the direction of the projects section - Done
+
+
+Update CheckList:
+Revise written portions, change color scheme, add more projects, update resume button, add moving background
+
+
+Link: https://elkshot.netlify.app/
